--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <h1>ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ</h1>
     <h1>ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ</h1>
 </body>
 </html>
