--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ</title>
     <link href="style.css" rel="stylesheet" />
     <link
@@ -38,47 +38,66 @@
     <section id="start" class="start content-section">
       <div class="container">
         <p class="start__text">
-          <span class="decorative-letter">Н</span>а жаль, в умовах інформаційної війни українці не припиняють споживати
-          російський контент, однак навіть аполітичний матеріал може певним
-          чином впливати на свідомість аудиторії.<br><br>Чому ж так відбувається?
-          Однією з причин є те, що наші громадяни просто не знають про існування
-          альтернативи.<br><br>Сучасні люди все менше дивляться телевізор, а ютуб та
-          інші соціальні мережі переповнені російськими блогерами, які певною
-          мірою транслюють меседжі кремлівської пропаганди своїй аудиторії. Цю
-          ситуацію потрібно негайно змінювати. Тим більше, що у нас є свої
-          блогери, про яких повинні дізнатися якомога більше людей, адже вони
-          створюють дійсно корисний і якісний продукт.<br><br>З метою ознайомлення з
-          нашим «виробником» було вирішено укласти підбірку українських
-          ютуб-каналів, які стовідсотково заслуговують на ваші перегляди та
-          вподобайки. Тут зібрано канали за різною тематикою на будь-який смак.
+          <span class="decorative-letter">Н</span>а жаль, в умовах інформаційної
+          війни українці не припиняють споживати російський контент, однак
+          навіть аполітичний матеріал може певним чином впливати на свідомість
+          аудиторії.<br /><br />Чому ж так відбувається? Однією з причин є те,
+          що наші громадяни просто не знають про існування альтернативи.<br /><br />Сучасні
+          люди все менше дивляться телевізор, а ютуб та інші соціальні мережі
+          переповнені російськими блогерами, які певною мірою транслюють меседжі
+          кремлівської пропаганди своїй аудиторії. Цю ситуацію потрібно негайно
+          змінювати. Тим більше, що у нас є свої блогери, про яких повинні
+          дізнатися якомога більше людей, адже вони створюють дійсно корисний і
+          якісний продукт.<br /><br />З метою ознайомлення з нашим «виробником»
+          було вирішено укласти підбірку українських ютуб-каналів, які
+          стовідсотково заслуговують на ваші перегляди та вподобайки. Тут
+          зібрано канали за різною тематикою на будь-який смак.
         </p>
       </div>
     </section>
 
     <section class="paralax-section">
-        <video autoplay muted loop>
-            <source src="./media/video/toronto.mp4" type="video/mp4">
-        </video>
-        <h2>Телебачення Торонто</h2>
+      <video autoplay muted loop>
+        <source src="./media/video/toronto.mp4" type="video/mp4" />
+      </video>
+      <h2>Телебачення Торонто</h2>
     </section>
 
-      <section id="start" class="start content-section">
+    <section id="toronto" class="toronto content-section">
       <div class="container">
-        <p class="start__text">
-          <span class="decorative-letter">Н</span>а жаль, в умовах інформаційної війни українці не припиняють споживати
-          російський контент, однак навіть аполітичний матеріал може певним
-          чином впливати на свідомість аудиторії.<br><br>Чому ж так відбувається?
-          Однією з причин є те, що наші громадяни просто не знають про існування
-          альтернативи.<br><br>Сучасні люди все менше дивляться телевізор, а ютуб та
-          інші соціальні мережі переповнені російськими блогерами, які певною
-          мірою транслюють меседжі кремлівської пропаганди своїй аудиторії. Цю
-          ситуацію потрібно негайно змінювати. Тим більше, що у нас є свої
-          блогери, про яких повинні дізнатися якомога більше людей, адже вони
-          створюють дійсно корисний і якісний продукт.<br><br>З метою ознайомлення з
-          нашим «виробником» було вирішено укласти підбірку українських
-          ютуб-каналів, які стовідсотково заслуговують на ваші перегляди та
-          вподобайки. Тут зібрано канали за різною тематикою на будь-який смак.
-        </p>
+        <div class="toronto__wrapper">
+          <div class="toronto__row">
+            <p class="toronto__text">
+              <span class="decorative-letter">у</span>країнськомовний канал, який став відомим завдяки програмі
+              «#@)₴?$0» («Ґрати, песик, дужка, гривня, знак питання, долар,
+              нуль»). Це щотижневий сатиричний дайджест новин із ведучим Майклом
+              Щуром та його співведучими, які час від часу змінюють одне одного.
+              Над створенням та випуском контенту працює велика команда
+              спеціалістів.
+            </p>
+            <img
+              src="./media/img/toronto1.png"
+              alt="Журналіст Майкл Щур"
+              class="toronto__img"
+            />
+          </div>
+          <div class="toronto__row">
+            <img
+              src="./media/img/toronto2.png"
+              alt="Телебачення Торонто"
+              class="toronto__img"
+            />
+            <p class="toronto__text">
+              У роликах журналісти обговорюють актуальні події України та світу.
+              На цей канал підписано 571 тис. користувачів. Аудиторії полюбилася
+              гумористична та невимушена подача новин. Також на каналі проводять
+              стріми, у яких ведучі активно комунікують з глядачами.
+            </p>
+          </div>
+          <p class="toronto__paragraph">
+              Так, у третьому сезоні локальними мемами Телебачення Торонто стали такі вислови як «ніт», «пам'ятник свині», «люди бідкаються, влада розводить руками» тощо, що збагатили лексикон українців.
+            </p>
+        </div>
       </div>
     </section>
 
