add new content

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
       </div>
     </section>
 
-    <section class="paralax-section">
-      <video autoplay muted loop>
-        <source src="./media/video/toronto.mp4" type="video/mp4" />
-      </video>
+    <section
+      class="paralax-section jarallax"
+      data-jarallax
+      data-video-src="https://vimeo.com/697747658"
+    >
       <h2>Телебачення Торонто</h2>
     </section>
 
@@ -68,11 +69,12 @@
         <div class="toronto__wrapper">
           <div class="toronto__row">
             <p class="toronto__text">
-              <span class="decorative-letter">у</span>країнськомовний канал, який став відомим завдяки програмі
-              «#@)₴?$0» («Ґрати, песик, дужка, гривня, знак питання, долар,
-              нуль»). Це щотижневий сатиричний дайджест новин із ведучим Майклом
-              Щуром та його співведучими, які час від часу змінюють одне одного.
-              Над створенням та випуском контенту працює велика команда
+              <span class="decorative-letter">у</span>країнськомовний канал,
+              який став відомим завдяки програмі «#@)₴?$0» («Ґрати, песик,
+              дужка, гривня, знак питання, долар, нуль»). Це щотижневий
+              сатиричний дайджест новин із ведучим Майклом Щуром та його
+              співведучими, які час від часу змінюють одне одного. Над
+              створенням та випуском контенту працює велика команда
               спеціалістів.
             </p>
             <img
@@ -95,12 +97,282 @@
             </p>
           </div>
           <p class="toronto__paragraph">
-              Так, у третьому сезоні локальними мемами Телебачення Торонто стали такі вислови як «ніт», «пам'ятник свині», «люди бідкаються, влада розводить руками» тощо, що збагатили лексикон українців.
-            </p>
+            Так, у третьому сезоні локальними мемами Телебачення Торонто стали
+            такі вислови як «ніт», «пам'ятник свині», «люди бідкаються, влада
+            розводить руками» тощо, що збагатили лексикон українців.
+          </p>
         </div>
       </div>
     </section>
 
+    <section
+      class="paralax-section jarallax"
+      data-jarallax
+      data-video-src="https://vimeo.com/697747559"
+    >
+      <h2>BIHUS info</h2>
+    </section>
+
+    <section id="bihus" class="bihus content-section">
+      <p class="bihus__text">
+        <span class="decorative-letter" style="vertical-align: 10px">Ц</span>е
+        офіційний канал проєкту Bihus.Info. Як зазначено на їх сайті, Bihus.Info
+        – команда журналістів, юристів, айтішників і активістів, що завдають
+        змін.<br /><br />
+        Основна тематика – антикорупційні журналістські розслідування. Автори
+        каналу викривають приховані схеми корупціонерів і викривають ворожу
+        пропаганду. Сьогодні вони оперативно інформують про останні події та
+        часто проводять онлайн-трансляції. Серед відеопроєктів Bihus.Info можна
+        назвати «Наші гроші з Денисом Бігусом», «Неведись», блоги та «Підсумки
+        дна» та ін. Мають 560 тис. підписників.
+      </p>
+      <div class="bihus__swiper">
+        <div class="swiper-wrapper">
+          <img src="./media/img/bihus1.png" class="swiper-slide" alt="" />
+          <img src="./media/img/bihus2.png" class="swiper-slide" alt="" />
+          <img src="./media/img/bihus3.jpg" class="swiper-slide" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="shevchenko" class="shevchenko content-section">
+      <div class="container">
+        <div class="shevchenko__wrapper">
+          <div class="shevchenko__info">
+            <h2>імені Т.Г. Шевченка</h2>
+            <p>
+              Якщо вас цікавить історія, то цей канал саме для вас. Тут ви
+              знайдете безліч відео на тему Київської Русі, українських козаків,
+              наших традицій та державної символіки тощо.<br /><br />
+              Ведучими каналу є брати Капранови – українські письменники,
+              видавці, публіцисти, громадські діячі. Наразі на канал підписалося
+              541 тис. користувачів.
+            </p>
+          </div>
+          <div class="shevchenko__img">
+            <img src="./media/img/shevchenko1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="history" class="history content-section">
+      <div class="container">
+        <div class="history__wrapper">
+          <div class="history__img">
+            <img src="./media/img/history1.png" alt="" />
+          </div>
+          <div class="history__info">
+            <h2>Історія без міфів</h2>
+            <p>
+              Ще один канал на історичну тематику. Наразі на нього підписалося
+              301 тис. користувачів. Цей проєкт розповідає про минуле України
+              без прикрас і фальсифікацій. Відео охоплюють досить широкий спектр
+              питань: від політики до біографії відомих особистостей.<br /><br />
+              Цікаво те, що експертами є фахові історики (доктори й кандидати
+              історичних наук, професори, доценти, співробітники наукових
+              інститутів та історичних музеїв). Тобто, компетентні науковці,
+              кожен із яких є спеціалістом із конкретної проблематики. Вони
+              спростовують антинаукові міфи та стереотипи про українців. Метою є
+              поширення суспільного інтересу до історії, формування позитивного
+              іміджу України тощо.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="paralax-section jarallax"
+      data-jarallax
+      data-video-src="https://youtu.be/AF1_1_sWuSE"
+    >
+      <h2>Ukraїner</h2>
+    </section>
+
+    <section id="ukrainer" class="ukrainer content-section">
+      <div class="container">
+        <div class="ukrainer__wrapper">
+          <div class="ukrainer__row">
+            <p class="ukrainer__text">
+              «<span class="decorative-letter">у</span>країна зсередини». Канал,
+              на який підписалося вже 219 тис. користувачів.<br /><br />
+              Проєкт розповідає історії з усіх куточків України: про бізнес,
+              мистецтво, історію та людей, а також про етнографічні,
+              географічні, антропологічні цікавинки.
+            </p>
+            <img
+              src="./media/img/ukrainer1.jpg"
+              alt="Журналіст Майкл Щур"
+              class="ukrainer__img"
+            />
+          </div>
+          <div class="toronto__row">
+            <img
+              src="./media/img/ukrainer2.jpg"
+              alt="Телебачення Торонто"
+              class="ukrainer__img"
+            />
+            <p class="ukrainer__text">
+              Як заявляють автори, вони почали створювати контент з метою
+              зрозуміти і сформулювати ким є українці та донести це світу в
+              доступній медійній формі. «Перша антропологічно-етнографічна
+              експедиція тривала з червня 2016 по жовтень 2018 і охопила всі 16
+              історичних регіонів України — від Слобожанщини до Поділля, від
+              Волині до Таврії, крім тих територій, що тимчасово окуповані».
+            </p>
+          </div>
+          <p class="ukrainer__paragraph">
+            Ними керує бажання переосмислити історичні особливості та культурні
+            коди власних земель. Насамперед вони хочуть показати самим
+            українцям, якою чудовою є наша країна.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="racionalist" class="shevchenko content-section">
+      <div class="container">
+        <div class="shevchenko__wrapper">
+          <div class="shevchenko__info">
+            <h2>Клятий раціоналіст</h2>
+            <p>
+              Це українськомовний канал, на який підписано 204 тис.
+              користувачів. Автор каналу Артем Албул створює науково-популярний
+              контент. Він розповідає про новини науки та цікаві факти,
+              спростовує псевдонаукові теорії та міфи, розбирає фейки, пропагує
+              критичне мислення.
+              <br /><br />Також варто окремо згадати про рубрику «Наукою по
+              ковіду», у якій зрозуміло пояснюється про COVID-19, штампи та
+              вакцинацію в Україні.
+            </p>
+          </div>
+          <div class="shevchenko__img">
+            <img src="./media/img/racionalist1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="sternenko" class="sternenko content-section">
+      <div class="container">
+        <div class="sternenko__wrapper">
+          <div class="sternenko__swiper">
+            <div class="swiper-wrapper">
+              <img
+                src="./media/img/sternenko1.png"
+                class="swiper-slide"
+                alt=""
+              />
+              <img
+                src="./media/img/sternenko2.png"
+                class="swiper-slide"
+                alt=""
+              />
+              <img
+                src="./media/img/sternenko3.jpg"
+                class="swiper-slide"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="sternenko__info">
+            <h2>STERNENKO</h2>
+            <p>
+              Ютуб-канал належить українському активісту та громадському діячу
+              Сергію Стерненку. Станом на сьогодні на нього підписалося 709 тис.
+              користувачів.<br /><br />
+              Він розповідає про події в Україні, зокрема про політичне життя
+              українського суспільства. Через свою чітку позицію та критику
+              проросійських політиків та пропагандистів неодноразово потрапляв у
+              конфлікти, зазнавав нападів та навіть кримінального
+              переслідування. Усе це Стерненко активно висвітлював на своєму
+              каналі.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="kinaman" class="shevchenko content-section">
+      <div class="container">
+        <div class="shevchenko__wrapper">
+          <div class="shevchenko__info">
+            <h2>Загін Кіноманів</h2>
+            <p>
+              Канал, що налічує 224 тис. підписників. Веде канал Віталій
+              Городієнко. <br /><br />
+              З метою підтримки та популяризації він розповідає своїй аудиторії
+              про українське кіно: створює документальні роботи на цю тему,
+              огляди на українські та світові прем’єри, репортажі з прем’єр та
+              фестивалів, інтерв’ю з діячами мистецтва, а також різноманітні
+              ТОП-и фільмів, що, на його думку, заслуговують на перегляд.
+              <br /><br />Також автор одразу вказує, що висловлює суто
+              суб’єктивну критику.
+            </p>
+          </div>
+          <div class="shevchenko__img">
+            <img src="./media/img/zk1.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section
+      class="paralax-section jarallax"
+      style="background-image: url(./media/img/gj1.png)"
+    >
+      <h2>Geek Journal</h2>
+    </section>
+
+    <section id="gj" class="ukrainer content-section">
+      <div class="container">
+        <div class="ukrainer__wrapper">
+          <div class="ukrainer__row">
+            <p class="ukrainer__text">
+              <span class="decorative-letter" style="vertical-align: 10px;">Ц</span>е також українськомовний
+              канал, на якому можна знайти огляди українських та світових
+              фільмів, актуальні новини зі всього світу. Станом на сьогодні
+              підписалося 201 тис. користувачів. Тайлер Андерсон разом із
+              дівчиною Юліаною створюють для аудиторії цікаві відео, що іноді
+              мають полемічний характер. Зазвичай це стосується оглядів фільмів
+              і телеканалів.
+            </p>
+            <img
+              src="./media/img/gj2.png"
+              alt="Журналіст Майкл Щур"
+              class="ukrainer__img"
+            />
+          </div>
+          <div class="toronto__row">
+            <img
+              src="./media/img/gj3.jpg"
+              alt="Телебачення Торонто"
+              class="ukrainer__img"
+            />
+            <p class="ukrainer__text">
+              Окрім цього, вони знімають про комікси, анімацію, рекламу й не
+              тільки. На каналі можна знайти й розмовні відео на інші теми.
+              Ролики досить атмосферні та «затишні», адже нерідко вдається
+              поностальгувати за старими мультфільмами, шоу тощо.
+            </p>
+          </div>
+          <p class="ukrainer__paragraph">
+            Особливої уваги заслуговує цикл відео про історію телеканалів
+            України, де згадують та аналізують програми, що виходили раніше.
+            Через один такий ролик вони навіть потрапили у скандал з «1+1».
+            Телеканал хотів заблокувати Geek Journal за критику своєї діяльності
+            та надіслав відразу три страйки. Однак у мережі піднялася справжня
+            хвиля підтримки під хештегом #saveGeekJournal, і ютуб-канал вдалось
+            врятувати.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <script src="jarallax.min.js"></script>
+    <script src="jarallax-video.min.js"></script>
+    <script src="jarallax-element.min.js"></script>
     <script src="anime.js"></script>
     <script src="index.js"></script>
   </body>
