--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </p>
           </div>
           <p class="toronto__paragraph">
-            Так, у третьому сезоні локальними мемами Телебачення Торонто стали
+            Так, у третьому сезоні локальними мемами <a href="https://www.youtube.com/channel/UCF_ZiWz2Vcq1o5u5i1TT3Kw" target="_blank" rel="noopener noreferrer">Телебачення Торонто</a> стали
             такі вислови як «ніт», «пам'ятник свині», «люди бідкаються, влада
             розводить руками» тощо, що збагатили лексикон українців.
           </p>
@@ -116,7 +116,7 @@
     <section id="bihus" class="bihus content-section">
       <p class="bihus__text">
         <span class="decorative-letter" style="vertical-align: 10px">Ц</span>е
-        офіційний канал проєкту Bihus.Info. Як зазначено на їх сайті, Bihus.Info
+        офіційний канал проєкту <a href="https://www.youtube.com/c/BIHUSinfo" target="_blank" rel="noopener noreferrer">Bihus.Info</a>. Як зазначено на їх сайті, Bihus.Info
         – команда журналістів, юристів, айтішників і активістів, що завдають
         змін.<br /><br />
         Основна тематика – антикорупційні журналістські розслідування. Автори
@@ -144,7 +144,7 @@
               Якщо вас цікавить історія, то цей канал саме для вас. Тут ви
               знайдете безліч відео на тему Київської Русі, українських козаків,
               наших традицій та державної символіки тощо.<br /><br />
-              Ведучими каналу є брати Капранови – українські письменники,
+              Ведучими <a href="https://www.youtube.com/channel/UC1Q2MLy0DEswY-1ZheTcYig" target="_blank" rel="noopener noreferrer">каналу</a> є брати Капранови – українські письменники,
               видавці, публіцисти, громадські діячі. Наразі на канал підписалося
               541 тис. користувачів.
             </p>
@@ -165,7 +165,7 @@
           <div class="history__info">
             <h2>Історія без міфів</h2>
             <p>
-              Ще один канал на історичну тематику. Наразі на нього підписалося
+              Ще один <a href="https://www.youtube.com/c/%D0%86%D1%81%D1%82%D0%BE%D1%80%D1%96%D1%8F%D0%91%D0%B5%D0%B7%D0%9C%D1%96%D1%84%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">канал</a> на історичну тематику. Наразі на нього підписалося
               301 тис. користувачів. Цей проєкт розповідає про минуле України
               без прикрас і фальсифікацій. Відео охоплюють досить широкий спектр
               питань: від політики до біографії відомих особистостей.<br /><br />
@@ -195,7 +195,7 @@
         <div class="ukrainer__wrapper">
           <div class="ukrainer__row">
             <p class="ukrainer__text">
-              «<span class="decorative-letter">у</span>країна зсередини». Канал,
+              «<span class="decorative-letter">у</span>країна зсередини». <a href="https://www.youtube.com/c/ukrainernet" target="_blank" rel="noopener noreferrer">Канал</a>,
               на який підписалося вже 219 тис. користувачів.<br /><br />
               Проєкт розповідає історії з усіх куточків України: про бізнес,
               мистецтво, історію та людей, а також про етнографічні,
@@ -237,7 +237,7 @@
           <div class="shevchenko__info">
             <h2>Клятий раціоналіст</h2>
             <p>
-              Це українськомовний канал, на який підписано 204 тис.
+              Це українськомовний <a href="https://www.youtube.com/channel/UCioz7pLeEpBNrFfwHb2m-pA" target="_blank" rel="noopener noreferrer">канал</a>, на який підписано 204 тис.
               користувачів. Автор каналу Артем Албул створює науково-популярний
               контент. Він розповідає про новини науки та цікаві факти,
               спростовує псевдонаукові теорії та міфи, розбирає фейки, пропагує
@@ -286,7 +286,7 @@
               українського суспільства. Через свою чітку позицію та критику
               проросійських політиків та пропагандистів неодноразово потрапляв у
               конфлікти, зазнавав нападів та навіть кримінального
-              переслідування. Усе це Стерненко активно висвітлював на своєму
+              переслідування. Усе це <a href="https://www.youtube.com/c/STERNENKO" target="_blank" rel="noopener noreferrer">Стерненко</a> активно висвітлював на своєму
               каналі.
             </p>
           </div>
@@ -300,7 +300,7 @@
           <div class="shevchenko__info">
             <h2>Загін Кіноманів</h2>
             <p>
-              Канал, що налічує 224 тис. підписників. Веде канал Віталій
+              <a href="https://www.youtube.com/c/%D0%97%D0%B0%D0%B3%D1%96%D0%BD%D0%9A%D1%96%D0%BD%D0%BE%D0%BC%D0%B0%D0%BD%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">Канал</a>, що налічує 224 тис. підписників. Веде канал Віталій
               Городієнко. <br /><br />
               З метою підтримки та популяризації він розповідає своїй аудиторії
               про українське кіно: створює документальні роботи на цю тему,
@@ -362,7 +362,7 @@
             Особливої уваги заслуговує цикл відео про історію телеканалів
             України, де згадують та аналізують програми, що виходили раніше.
             Через один такий ролик вони навіть потрапили у скандал з «1+1».
-            Телеканал хотів заблокувати Geek Journal за критику своєї діяльності
+            Телеканал хотів заблокувати <a href="https://www.youtube.com/c/GeekJournal" target="_blank" rel="noopener noreferrer">Geek Journal</a> за критику своєї діяльності
             та надіслав відразу три страйки. Однак у мережі піднялася справжня
             хвиля підтримки під хештегом #saveGeekJournal, і ютуб-канал вдалось
             врятувати.
@@ -382,7 +382,7 @@
               Відео здебільшого розважального характеру. В описі каналу
               зазначено, що це «блоґ про агресивний несмак українського бомонду
               і не тільки».<br /><br />
-              Загалом автори каналу популяризують українське (наприклад, у
+              Загалом автори <a href="https://www.youtube.com/c/Ragulivna" target="_blank" rel="noopener noreferrer">каналу</a> популяризують українське (наприклад, у
               рубриці «ЧИТАНКА» розглядають українські книжки, а у «ВЕЧІРНЬОМУ
               КІНОЗАЛІ» – фільми) і розповідають про ганебні вчинки та вислови
               проросійських політиків, «зірок», блогерів, які чомусь мають вплив
@@ -446,7 +446,7 @@
               class="ukrainer__img"
             />
             <p class="ukrainer__text">
-              Автори каналу пишуть: «Підпільний стендап – це наймасштабніший
+              Автори каналу пишуть: «<a href="https://www.youtube.com/channel/UCwuzITdbxPSG_9PakpsKNwQ" target="_blank" rel="noopener noreferrer">Підпільний стендап</a> – це наймасштабніший
               стендап проект України. Кращі українські стендап коміки в одному
               місці та безліч контенту для улюблених глядачів».<br /><br />
               Сьогодні на каналі також публікуються стріми за участі коміків, у
@@ -463,7 +463,7 @@
           <div class="shevchenko__info">
             <h2>САМВИДАВ</h2>
             <p>
-              Наразі на канал підписано 31,6 тис. користувачів. Його ведуть
+              Наразі на <a href="https://www.youtube.com/c/%D0%A1%D0%90%D0%9C%D0%92%D0%98%D0%94%D0%90%D0%92" target="_blank" rel="noopener noreferrer">канал</a> підписано 31,6 тис. користувачів. Його ведуть
               Михайло Рудь та Костянтин Трембовецький. Використовуючи
               гумористичну манеру викладу, автори у «Хорошому Поганому Злому
               Подкасті (ХПЗП)» розповідають про актуальні явища та події як в
@@ -501,7 +501,7 @@
               <br /><br />В описі каналу вона зазначає, що «…філологія – це не
               тільки про зубріння правил чи викладання в школі. Це стан душі,
               яким дуже хочеться поділитися з людьми». <br /><br />На цьому
-              каналі ви можете дізнатися щось нове про українські діалекти, а
+              <a href="https://www.youtube.com/channel/UCftNLdhx5pYzuzQT9ig362g" target="_blank" rel="noopener noreferrer">каналі</a> ви можете дізнатися щось нове про українські діалекти, а
               також окремо хочеться виокремити відео про мовні репресії в
               Україні ХХ ст.
             </p>
@@ -522,7 +522,7 @@
               <br /><br />Авторка вирішила створити канал тому, що
               українськомовного контенту на таку тематику дуже мало. Вона
               зрозуміла, що час «взяти все у свої руки».<br /><br />
-              Станом на сьогодні на цей канал підписано 3,61 тис. користувачів.
+              Станом на сьогодні на цей <a href="https://www.youtube.com/channel/UC_YzlhQx6G-SRg3Gp4bCzYg" target="_blank" rel="noopener noreferrer">канал</a> підписано 3,61 тис. користувачів.
             </p>
           </div>
           <div class="shevchenko__img">
@@ -541,7 +541,7 @@
           <div class="history__info">
             <h2>Beauty and Gloom</h2>
             <p>
-              Канал має 3,33 тис. підписників. Авторка каналу створює огляди та
+              <a href="https://www.youtube.com/c/BeautyandGloom" target="_blank" rel="noopener noreferrer">Канал</a> має 3,33 тис. підписників. Авторка каналу створює огляди та
               відгуки на різноманітні книжки та комікси, зокрема у жанрі
               фантастики та фентезі. Іноді викладає відео про фільми та аніме.
               Розповідає про новинки, цікаві факти тощо. Також (як приємний
