--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="description" content="На жаль, в умовах інформаційної
+          війни українці не припиняють споживати російський контент, однак
+          навіть аполітичний матеріал може певним чином впливати на свідомість
+          аудиторії. Чому ж так відбувається?" />
+          <meta name=”Author” content="Вероніка Станчик" />
+          <meta property="og:type" content="article" />
+          <meta property="og:title" content="ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ" />
+          <meta property="og:description" content="На жаль, в умовах інформаційної
+          війни українці не припиняють споживати російський контент, однак
+          навіть аполітичний матеріал може певним чином впливати на свідомість
+          аудиторії. Чому ж так відбувається?" />
+          <meta property="og:image" content="https://ms.detector.media/doc/images/news/24034/i75_ArticleImage_24034.jpg" />
+
+
     <title>ТИ – ЦЕ ТЕ, ЩО ТИ СПОЖИВАЄШ</title>
     <link href="style.css" rel="stylesheet" />
     <link
