--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
             </p>
           </div>
           <p class="toronto__paragraph">
-            Так, у третьому сезоні локальними мемами <a href="https://www.youtube.com/channel/UCF_ZiWz2Vcq1o5u5i1TT3Kw" target="_blank" rel="noopener noreferrer">Телебачення Торонто</a> стали
+            Так, у третьому сезоні локальними мемами Телебачення Торонто стали
             такі вислови як «ніт», «пам'ятник свині», «люди бідкаються, влада
             розводить руками» тощо, що збагатили лексикон українців.
           </p>
+          <a href="https://www.youtube.com/channel/UCF_ZiWz2Vcq1o5u5i1TT3Kw" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
         </div>
       </div>
     </section>
@@ -128,9 +129,10 @@
     </section>
 
     <section id="bihus" class="bihus content-section">
+      <div style="margin-left: auto;">
       <p class="bihus__text">
         <span class="decorative-letter" style="vertical-align: 10px">Ц</span>е
-        офіційний канал проєкту <a href="https://www.youtube.com/c/BIHUSinfo" target="_blank" rel="noopener noreferrer">Bihus.Info</a>. Як зазначено на їх сайті, Bihus.Info
+        офіційний канал проєкту Bihus.Info. Як зазначено на їх сайті, Bihus.Info
         – команда журналістів, юристів, айтішників і активістів, що завдають
         змін.<br /><br />
         Основна тематика – антикорупційні журналістські розслідування. Автори
@@ -140,6 +142,8 @@
         назвати «Наші гроші з Денисом Бігусом», «Неведись», блоги та «Підсумки
         дна» та ін. Мають 560 тис. підписників.
       </p>
+      <a href="https://www.youtube.com/c/BIHUSinfo" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
+      </div>
       <div class="bihus__swiper">
         <div class="swiper-wrapper">
           <img src="./media/img/bihus1.png" class="swiper-slide" alt="" />
@@ -158,10 +162,11 @@
               Якщо вас цікавить історія, то цей канал саме для вас. Тут ви
               знайдете безліч відео на тему Київської Русі, українських козаків,
               наших традицій та державної символіки тощо.<br /><br />
-              Ведучими <a href="https://www.youtube.com/channel/UC1Q2MLy0DEswY-1ZheTcYig" target="_blank" rel="noopener noreferrer">каналу</a> є брати Капранови – українські письменники,
+              Ведучими каналу є брати Капранови – українські письменники,
               видавці, публіцисти, громадські діячі. Наразі на канал підписалося
               541 тис. користувачів.
             </p>
+             <a href="https://www.youtube.com/channel/UC1Q2MLy0DEswY-1ZheTcYig" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="shevchenko__img">
             <img src="./media/img/shevchenko1.png" alt="" />
@@ -179,7 +184,7 @@
           <div class="history__info">
             <h2>Історія без міфів</h2>
             <p>
-              Ще один <a href="https://www.youtube.com/c/%D0%86%D1%81%D1%82%D0%BE%D1%80%D1%96%D1%8F%D0%91%D0%B5%D0%B7%D0%9C%D1%96%D1%84%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">канал</a> на історичну тематику. Наразі на нього підписалося
+              Ще один канал на історичну тематику. Наразі на нього підписалося
               301 тис. користувачів. Цей проєкт розповідає про минуле України
               без прикрас і фальсифікацій. Відео охоплюють досить широкий спектр
               питань: від політики до біографії відомих особистостей.<br /><br />
@@ -191,6 +196,7 @@
               поширення суспільного інтересу до історії, формування позитивного
               іміджу України тощо.
             </p>
+                         <a href="https://www.youtube.com/c/%D0%86%D1%81%D1%82%D0%BE%D1%80%D1%96%D1%8F%D0%91%D0%B5%D0%B7%D0%9C%D1%96%D1%84%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
         </div>
       </div>
@@ -209,7 +215,7 @@
         <div class="ukrainer__wrapper">
           <div class="ukrainer__row">
             <p class="ukrainer__text">
-              «<span class="decorative-letter">у</span>країна зсередини». <a href="https://www.youtube.com/c/ukrainernet" target="_blank" rel="noopener noreferrer">Канал</a>,
+              «<span class="decorative-letter">у</span>країна зсередини». Канал,
               на який підписалося вже 219 тис. користувачів.<br /><br />
               Проєкт розповідає історії з усіх куточків України: про бізнес,
               мистецтво, історію та людей, а також про етнографічні,
@@ -241,6 +247,7 @@
             коди власних земель. Насамперед вони хочуть показати самим
             українцям, якою чудовою є наша країна.
           </p>
+           <a href="https://www.youtube.com/c/ukrainernet" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
         </div>
       </div>
     </section>
@@ -251,7 +258,7 @@
           <div class="shevchenko__info">
             <h2>Клятий раціоналіст</h2>
             <p>
-              Це українськомовний <a href="https://www.youtube.com/channel/UCioz7pLeEpBNrFfwHb2m-pA" target="_blank" rel="noopener noreferrer">канал</a>, на який підписано 204 тис.
+              Це українськомовний канал, на який підписано 204 тис.
               користувачів. Автор каналу Артем Албул створює науково-популярний
               контент. Він розповідає про новини науки та цікаві факти,
               спростовує псевдонаукові теорії та міфи, розбирає фейки, пропагує
@@ -260,6 +267,7 @@
               ковіду», у якій зрозуміло пояснюється про COVID-19, штампи та
               вакцинацію в Україні.
             </p>
+            <a href="https://www.youtube.com/channel/UCioz7pLeEpBNrFfwHb2m-pA" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="shevchenko__img">
             <img src="./media/img/racionalist1.png" alt="" />
@@ -300,9 +308,10 @@
               українського суспільства. Через свою чітку позицію та критику
               проросійських політиків та пропагандистів неодноразово потрапляв у
               конфлікти, зазнавав нападів та навіть кримінального
-              переслідування. Усе це <a href="https://www.youtube.com/c/STERNENKO" target="_blank" rel="noopener noreferrer">Стерненко</a> активно висвітлював на своєму
+              переслідування. Усе це Стерненко активно висвітлював на своєму
               каналі.
             </p>
+            <a href="https://www.youtube.com/c/STERNENKO" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
         </div>
       </div>
@@ -314,7 +323,7 @@
           <div class="shevchenko__info">
             <h2>Загін Кіноманів</h2>
             <p>
-              <a href="https://www.youtube.com/c/%D0%97%D0%B0%D0%B3%D1%96%D0%BD%D0%9A%D1%96%D0%BD%D0%BE%D0%BC%D0%B0%D0%BD%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">Канал</a>, що налічує 224 тис. підписників. Веде канал Віталій
+              Канал, що налічує 224 тис. підписників. Веде канал Віталій
               Городієнко. <br /><br />
               З метою підтримки та популяризації він розповідає своїй аудиторії
               про українське кіно: створює документальні роботи на цю тему,
@@ -324,6 +333,7 @@
               <br /><br />Також автор одразу вказує, що висловлює суто
               суб’єктивну критику.
             </p>
+            <a href="https://www.youtube.com/c/%D0%97%D0%B0%D0%B3%D1%96%D0%BD%D0%9A%D1%96%D0%BD%D0%BE%D0%BC%D0%B0%D0%BD%D1%96%D0%B2" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="shevchenko__img">
             <img src="./media/img/zk1.png" alt="" />
@@ -376,11 +386,12 @@
             Особливої уваги заслуговує цикл відео про історію телеканалів
             України, де згадують та аналізують програми, що виходили раніше.
             Через один такий ролик вони навіть потрапили у скандал з «1+1».
-            Телеканал хотів заблокувати <a href="https://www.youtube.com/c/GeekJournal" target="_blank" rel="noopener noreferrer">Geek Journal</a> за критику своєї діяльності
+            Телеканал хотів заблокувати Geek Journal за критику своєї діяльності
             та надіслав відразу три страйки. Однак у мережі піднялася справжня
             хвиля підтримки під хештегом #saveGeekJournal, і ютуб-канал вдалось
             врятувати.
           </p>
+           <a href="https://www.youtube.com/c/GeekJournal" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
         </div>
       </div>
     </section>
@@ -396,12 +407,13 @@
               Відео здебільшого розважального характеру. В описі каналу
               зазначено, що це «блоґ про агресивний несмак українського бомонду
               і не тільки».<br /><br />
-              Загалом автори <a href="https://www.youtube.com/c/Ragulivna" target="_blank" rel="noopener noreferrer">каналу</a> популяризують українське (наприклад, у
+              Загалом автори каналу популяризують українське (наприклад, у
               рубриці «ЧИТАНКА» розглядають українські книжки, а у «ВЕЧІРНЬОМУ
               КІНОЗАЛІ» – фільми) і розповідають про ганебні вчинки та вислови
               проросійських політиків, «зірок», блогерів, які чомусь мають вплив
               в українському медіапросторі.
             </p>
+             <a href="https://www.youtube.com/c/Ragulivna" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="ragulivna__swiper">
             <div class="swiper-wrapper">
@@ -460,13 +472,14 @@
               class="ukrainer__img"
             />
             <p class="ukrainer__text">
-              Автори каналу пишуть: «<a href="https://www.youtube.com/channel/UCwuzITdbxPSG_9PakpsKNwQ" target="_blank" rel="noopener noreferrer">Підпільний стендап</a> – це наймасштабніший
+              Автори каналу пишуть: «Підпільний стендап – це наймасштабніший
               стендап проект України. Кращі українські стендап коміки в одному
               місці та безліч контенту для улюблених глядачів».<br /><br />
               Сьогодні на каналі також публікуються стріми за участі коміків, у
               яких вони обговорюють головні новини країни.
             </p>
           </div>
+          <a href="https://www.youtube.com/channel/UCwuzITdbxPSG_9PakpsKNwQ" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
         </div>
       </div>
     </section>
@@ -477,7 +490,7 @@
           <div class="shevchenko__info">
             <h2>САМВИДАВ</h2>
             <p>
-              Наразі на <a href="https://www.youtube.com/c/%D0%A1%D0%90%D0%9C%D0%92%D0%98%D0%94%D0%90%D0%92" target="_blank" rel="noopener noreferrer">канал</a> підписано 31,6 тис. користувачів. Його ведуть
+              Наразі на канал підписано 31,6 тис. користувачів. Його ведуть
               Михайло Рудь та Костянтин Трембовецький. Використовуючи
               гумористичну манеру викладу, автори у «Хорошому Поганому Злому
               Подкасті (ХПЗП)» розповідають про актуальні явища та події як в
@@ -491,6 +504,7 @@
               онлайн-трансляції під назвою «Пропаганда спокою», що говорить сама
               за себе.
             </p>
+            <a href="https://www.youtube.com/c/%D0%A1%D0%90%D0%9C%D0%92%D0%98%D0%94%D0%90%D0%92" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="shevchenko__img">
             <img src="./media/img/sv1.jpg" alt="" />
@@ -515,10 +529,11 @@
               <br /><br />В описі каналу вона зазначає, що «…філологія – це не
               тільки про зубріння правил чи викладання в школі. Це стан душі,
               яким дуже хочеться поділитися з людьми». <br /><br />На цьому
-              <a href="https://www.youtube.com/channel/UCftNLdhx5pYzuzQT9ig362g" target="_blank" rel="noopener noreferrer">каналі</a> ви можете дізнатися щось нове про українські діалекти, а
+             каналі ви можете дізнатися щось нове про українські діалекти, а
               також окремо хочеться виокремити відео про мовні репресії в
               Україні ХХ ст.
             </p>
+            <a href="https://www.youtube.com/channel/UCftNLdhx5pYzuzQT9ig362g" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
         </div>
       </div>
@@ -536,8 +551,9 @@
               <br /><br />Авторка вирішила створити канал тому, що
               українськомовного контенту на таку тематику дуже мало. Вона
               зрозуміла, що час «взяти все у свої руки».<br /><br />
-              Станом на сьогодні на цей <a href="https://www.youtube.com/channel/UC_YzlhQx6G-SRg3Gp4bCzYg" target="_blank" rel="noopener noreferrer">канал</a> підписано 3,61 тис. користувачів.
+              Станом на сьогодні на цей канал підписано 3,61 тис. користувачів.
             </p>
+             <a href="https://www.youtube.com/channel/UC_YzlhQx6G-SRg3Gp4bCzYg" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
           <div class="shevchenko__img">
             <img src="./media/img/vivsyanka.png" alt="" />
@@ -555,12 +571,13 @@
           <div class="history__info">
             <h2>Beauty and Gloom</h2>
             <p>
-              <a href="https://www.youtube.com/c/BeautyandGloom" target="_blank" rel="noopener noreferrer">Канал</a> має 3,33 тис. підписників. Авторка каналу створює огляди та
+              Канал має 3,33 тис. підписників. Авторка каналу створює огляди та
               відгуки на різноманітні книжки та комікси, зокрема у жанрі
               фантастики та фентезі. Іноді викладає відео про фільми та аніме.
               Розповідає про новинки, цікаві факти тощо. Також (як приємний
               бонус) авторка іноді проводить розіграші.
             </p>
+             <a href="https://www.youtube.com/c/BeautyandGloom" target="_blank" rel="noopener noreferrer">ПОСИЛАННЯ</a>
           </div>
         </div>
       </div>
@@ -584,7 +601,7 @@
           <br /><br />У матеріалі повідомляється про основну тематику каналів.
           Звісно, що зараз більшість з цих блогерів висвітлюють новини щодо дій
           російських окупантів в Україні, підтримують свою аудиторію та
-          призупинили вихід звичайних роликів. <br /><br />Всю інформацію та
+          призупинили вихід звичайних роликів. <br /><br />Усю інформацію та
           матеріали взято з відкритих джерел.
         </p>
         <div class="intro__publish">
